--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.github.lzyzsd:jsbridge:1.0.4'
+    implementation 'com.github.yuzhiqiang1993:zxing:2.2.1'
 }
