--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
 
     implementation 'com.github.lzyzsd:jsbridge:1.0.4'
     implementation 'com.github.yuzhiqiang1993:zxing:2.2.1'
+
+    implementation 'com.alibaba:fastjson:2.0.19.android'
 }
